<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE95263">

    <RelativeLayout
        android:id="@+id/centerhorizontalline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" />

    <RelativeLayout
        android:id="@+id/centerverticalline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="15dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_calculator"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/weightlayout"
        android:layout_width="190dp"
        android:layout_height="150dp"
        android:layout_above="@id/centerhorizontalline"
        android:layout_marginLeft="220dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/cardbackground">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textColor="#5E35B1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currentweight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:text="@string/_50"
            android:textColor="#5E35B1"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/currentweight"
            android:text="@string/kg"
            android:textColor="#5E35B1"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/wightseekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:progressTint="#FF4C4C" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/heightlayout"
        android:layout_width="190dp"
        android:layout_height="150dp"
        android:layout_above="@id/centerhorizontalline"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/cardbackground">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/height"
            android:textAlignment="center"
            android:textColor="#5E35B1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currentheight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:text="@string/_170"
            android:textColor="#5E35B1"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/currentheight"
            android:text="@string/cm"
            android:textColor="#5E35B1"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/heightseekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:progressTint="#FF4C4C" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/resultlayout"
        android:layout_width="360dp"
        android:layout_height="100dp"
        android:layout_below="@id/weightlayout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/cardbackground">

        <TextView
            android:id="@+id/bmiresult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi"
            android:textColor="#5E35B1"
            android:textSize="20sp" />


    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/calculatebmi"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/buttonbackground"
        android:text="@string/calculate_your_bmi"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>